@@ -40,7 +40,7 @@
 /*
  *
  */
-unsigned long long
+unsigned __int64
 pthread_getunique_np (pthread_t thread)
 {
   return ((ptw32_thread_t*)thread.p)->seqNumber;
